Number of Page implementation
Implementation of the actual number of page.

--- a/SS_catalog/index.html
+++ b/SS_catalog/index.html
@@ -16,7 +16,7 @@
 
       <nav class="navbar bg-body-tertiary"  data-bs-theme="dark">
             <div class="container-fluid">
-              <div id="pageTracker"></div>
+              <div class="navbar-brand mx-auto text-white" id="pageTracker"></div>
               <a class="navbar-brand" href="#"></a>
             </div>
       </nav>
