--- a/SS_catalog/index.html
+++ b/SS_catalog/index.html
@@ -24,16 +24,20 @@
       <div id="carouselExample" class="carousel slide">
       <div class="carousel-container">
             <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item">
                   <div class="d-flex justify-content-center">
                         <img src="/media/images/1.png" class="custom-width" alt="First slide">
                   </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item active">
                   <div class="d-flex">
                         <img src="/media/images/2.png" class="float-left custom-width" alt="">
                         <img src="/media/images/3.png" class="custom-width" alt="">
                   </div>
+                  <button class="btn btn-link" style="border: none; position: absolute; right: 4vw; top: 47vh;">
+                        <i class="fa-solid fa-cart-shopping" style="font-size: 2vw;"></i>
+                  </button>
+                      
             </div>
             <div class="carousel-item">
                   <div class="d-flex">
