--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0">
-        <link rel="icon" type="image/x-icon" href="./media/logo/logo_white.webp">
+        <link rel="icon" type="image/x-icon" href="./media/logo/logo_white.png">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
       
       <nav class="navbar" data-bs-theme="dark">
             <div class="container-fluid">
-                  <img src="./media/logo/logo_white.webp" alt="Logo" class="navbar-logo">
+                  <img src="./media/logo/logo_white.png" alt="Logo" class="navbar-logo">
                   <div class="navbar-brand mx-auto text-white custom-font" id="pageTracker"></div>
                   <button class="btn btn-link btn-sm" data-bs-toggle="modal" data-bs-target="#cartModal">
                         <i class="fa-solid fa-cart-shopping button-icon-secondary"></i>
