--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>By Sofia Soeiro - Catalog</title>
 
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
         <link rel="icon" type="image/x-icon" href="./media/logo/logo_white.png">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
