--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
         
       <div class="content">
-      <div id="carouselExample" class="carousel slide">
+      <div id="carouselExample" class="carousel slide pointer-event">
       <div class="carousel-container">
             <div class="carousel-inner">
             <div class="carousel-item active">
